syntax = "proto3";

import "Common.proto";

package wealth;

option csharp_namespace = "Wealth.InstrumentManagement";

service InstrumentsService {
  rpc GetBond (GetBondRequest) returns (GetBondResponse);
  rpc GetStock (GetStockRequest) returns (GetStockResponse);
  rpc CreateStock (CreateStockRequest) returns (CreateStockResponse);
  rpc CreateBond (CreateBondRequest) returns (CreateBondResponse);
  rpc ChangeStockPrice (ChangeStockPriceRequest) returns (ChangePriceResponse);
  rpc ChangeBondPrice (ChangeBondPriceRequest) returns (ChangePriceResponse);
}

// get by bondId, isin or figi
message GetBondRequest {
  oneof variant {
    BondIdProto bond_id = 1;
    ISINProto isin = 2;
    string figi = 3;
  }
}

// get by stockId, isin or figi
message GetStockRequest {
  oneof variant {
    StockIdProto stock_id = 1;
    ISINProto isin = 2;
    string figi = 3;
  }
}

message GetBondResponse {
  BondIdProto bond_id = 1;
  string name = 2;
  MoneyProto price = 3;
  ISINProto isin = 4;
  string figi = 5;
}

message GetStockResponse {
  StockIdProto stock_id = 1;
  string name = 2;
  MoneyProto price = 3;
  ISINProto isin = 4;
  string figi = 5;
  int32 lot_size = 6;
  MoneyProto dividend_per_year = 7;
}

message CreateStockRequest {
  string name = 1;
  ISINProto isin = 2;
  string figi = 3;
  int32 lot_size = 4;
}

message CreateStockResponse {
  StockIdProto stock_id = 1;
}

message CreateBondRequest {
  string name = 1;
  ISINProto isin = 2;
  string figi = 3;
}

message CreateBondResponse {
  BondIdProto bond_id = 1;
}

message ChangeStockPriceRequest {
  StockIdProto stock_id = 1;
  MoneyProto price = 2;
}

message ChangeBondPriceRequest {
  BondIdProto bond_id = 1;
  MoneyProto price = 2;
}

message ChangePriceResponse {
}